--- a/next-flls/src/components/Layout/styles.module.scss
+++ b/next-flls/src/components/Layout/styles.module.scss
@@ -3,10 +3,19 @@
     width: auto;
     height: 85vh;
 
-    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    background-color: white;
-
+    
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.95); 
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.95);
+    
     text-align: center;
     padding-top: 10px;
+    border-radius: 10px;
+
+   
+    color: white;
+   
 }
