--- a/next-flls/src/components/Layout/styles.module.scss
+++ b/next-flls/src/components/Layout/styles.module.scss
@@ -1,7 +1,7 @@
 .Container{
     min-width: 260px;
     width: auto;
-    height: 85vh;
+    // height: 85vh;
 
     display: flex;
     flex-direction: column;
