--- a/next-flls/src/components/inputValores/styles.module.scss
+++ b/next-flls/src/components/inputValores/styles.module.scss
@@ -1,12 +1,10 @@
 .Container{
     height: auto;
     width: 45vw;
-    margin: 10px 10px;
     border-radius: 10px;
-    border: 2px solid white;
     color: white;
 
-    padding: 10px 0px;
+    margin: 10px 0px;
 
     display: flex;
     flex-direction: column;
@@ -17,13 +15,13 @@
         height: 65px;
         width: 90%;
 
-        margin: 10px 0px;
-        padding: 10px;
+        margin: 5px 0px;
+        // padding: 10px;
 
         font-size: 1.1rem;
 
         border-radius: 10px;
-        border-width: 1px;
+        border-width: 2px;
         border-color: black;
 
         text-align: center;
@@ -39,5 +37,6 @@
         -moz-appearance: textfield;
     }
 
-    
+   
+
 }
