--- a/next-flls/src/components/background/styles.module.scss
+++ b/next-flls/src/components/background/styles.module.scss
@@ -6,7 +6,6 @@
     flex-direction: column;
     align-items: center;
 
-    
     -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.95); 
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.95);
     
@@ -14,7 +13,11 @@
     padding-top: 10px;
     border-radius: 10px;
 
-   
     color: white;
-   
+}
+
+@media screen and (max-width:731px) {
+    .Container{
+        min-width: 300px;
+    }
 }
