--- a/next-flls/src/components/inputValores/styles.module.scss
+++ b/next-flls/src/components/inputValores/styles.module.scss
@@ -37,6 +37,14 @@
         -moz-appearance: textfield;
     }
 
-   
+}
 
+@media screen and (max-width:731px){
+    .Container{
+        input{
+            
+            font-size: 1rem;
+           width: auto;
+        }
+    }
 }
